--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,3 +15,11 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          plugin_languages: yes
+          plugin_followup: yes
+          plugin_lines: yes
+          plugin_traffic: yes
+          plugin_achievements: yes
+          plugin_achievements_threshold: B
+          plugin_achievements_secrets: yes
+          plugin_achievements_limit: 0
